--- a/ReadingList/UI/Home/Home.storyboard
+++ b/ReadingList/UI/Home/Home.storyboard
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="xxi-di-qzX">
-    <device id="retina6_1" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="xxi-di-qzX">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -27,6 +25,10 @@
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="73N-QL-l0O">
                                                 <rect key="frame" x="0.0" y="0.0" width="414" height="40"/>
                                                 <subviews>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SjC-4F-GHl">
+                                                        <rect key="frame" x="16" y="0.0" width="18" height="40"/>
+                                                        <state key="normal" image="person.fill" catalog="system"/>
+                                                    </button>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IR8-9H-TqJ">
                                                         <rect key="frame" x="386" y="0.0" width="20" height="40"/>
                                                         <state key="normal" image="wheel"/>
@@ -37,9 +39,12 @@
                                                 </subviews>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
+                                                    <constraint firstItem="SjC-4F-GHl" firstAttribute="top" secondItem="73N-QL-l0O" secondAttribute="top" id="DeF-ca-EOy"/>
                                                     <constraint firstAttribute="height" constant="40" id="MJJ-i3-Wpx"/>
                                                     <constraint firstAttribute="trailing" secondItem="IR8-9H-TqJ" secondAttribute="trailing" constant="8" id="Yid-ID-WfG"/>
                                                     <constraint firstAttribute="bottom" secondItem="IR8-9H-TqJ" secondAttribute="bottom" id="dgl-Q3-TqH"/>
+                                                    <constraint firstAttribute="bottom" secondItem="SjC-4F-GHl" secondAttribute="bottom" id="i82-xS-N2l"/>
+                                                    <constraint firstItem="SjC-4F-GHl" firstAttribute="leading" secondItem="73N-QL-l0O" secondAttribute="leading" constant="16" id="ssz-lM-Yba"/>
                                                     <constraint firstItem="IR8-9H-TqJ" firstAttribute="top" secondItem="73N-QL-l0O" secondAttribute="top" id="y4U-MD-Qti"/>
                                                 </constraints>
                                             </view>
@@ -290,6 +295,7 @@
     </scenes>
     <resources>
         <image name="arrow_right" width="30" height="30"/>
+        <image name="person.fill" catalog="system" width="128" height="120"/>
         <image name="wheel" width="20" height="20"/>
     </resources>
 </document>
