--- a/ReadingList/UI/CustomView/WebTooBar/WebToolBarView.xib
+++ b/ReadingList/UI/CustomView/WebTooBar/WebToolBarView.xib
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -19,17 +18,17 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
+            <rect key="frame" x="0.0" y="0.0" width="328" height="60"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4rt-EO-0ea">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
+                    <rect key="frame" x="0.0" y="0.0" width="328" height="60"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" distribution="equalCentering" alignment="center" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="9mR-V0-06h">
-                            <rect key="frame" x="24" y="0.0" width="327" height="40"/>
+                            <rect key="frame" x="24" y="0.0" width="280" height="60"/>
                             <subviews>
                                 <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="q0p-cZ-hxD">
-                                    <rect key="frame" x="0.0" y="2" width="70" height="36"/>
+                                    <rect key="frame" x="0.0" y="12" width="70" height="36"/>
                                     <subviews>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Etn-UB-55Q">
                                             <rect key="frame" x="0.0" y="0.0" width="30" height="36"/>
@@ -54,7 +53,7 @@
                                     </subviews>
                                 </stackView>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9c4-mi-SMW">
-                                    <rect key="frame" x="135.5" y="6.5" width="81" height="27"/>
+                                    <rect key="frame" x="112" y="16.5" width="81" height="27"/>
                                     <fontDescription key="fontDescription" name="HiraginoSans-W6" family="Hiragino Sans" pointSize="15"/>
                                     <state key="normal" title=" + 後で読む">
                                         <color key="titleColor" name="CornFlower"/>
@@ -64,7 +63,7 @@
                                     </connections>
                                 </button>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xjj-zN-05b">
-                                    <rect key="frame" x="307" y="10" width="20" height="20"/>
+                                    <rect key="frame" x="260" y="20" width="20" height="20"/>
                                     <constraints>
                                         <constraint firstAttribute="width" secondItem="xjj-zN-05b" secondAttribute="height" multiplier="1:1" id="7yq-ug-K6n"/>
                                         <constraint firstAttribute="width" constant="20" id="OsQ-Hq-rhZ"/>
@@ -82,11 +81,16 @@
                         <constraint firstItem="9mR-V0-06h" firstAttribute="top" secondItem="4rt-EO-0ea" secondAttribute="top" id="WfZ-XG-Vk6"/>
                         <constraint firstItem="9mR-V0-06h" firstAttribute="leading" secondItem="4rt-EO-0ea" secondAttribute="leading" constant="24" id="Xg3-Om-OO9"/>
                         <constraint firstAttribute="trailing" secondItem="9mR-V0-06h" secondAttribute="trailing" constant="24" id="jvz-IR-zi3"/>
-                        <constraint firstAttribute="bottom" secondItem="9mR-V0-06h" secondAttribute="bottom" constant="20" id="vBb-6v-Nuc"/>
                     </constraints>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                             <real key="value" value="20"/>
+                        </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                            <real key="value" value="2"/>
+                        </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                            <color key="value" name="CornFlower"/>
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
                 </view>
@@ -96,10 +100,12 @@
                 <constraint firstAttribute="bottom" secondItem="4rt-EO-0ea" secondAttribute="bottom" id="CqR-LH-7cC"/>
                 <constraint firstItem="4rt-EO-0ea" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="JZ2-FV-6Us"/>
                 <constraint firstItem="4rt-EO-0ea" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="dmW-ej-T3t"/>
+                <constraint firstItem="Dep-uP-Zjp" firstAttribute="bottom" secondItem="9mR-V0-06h" secondAttribute="bottom" id="eaO-DS-R1W"/>
                 <constraint firstAttribute="trailing" secondItem="4rt-EO-0ea" secondAttribute="trailing" id="tBM-lU-x4K"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="105.79710144927537" y="279.91071428571428"/>
+            <viewLayoutGuide key="safeArea" id="Dep-uP-Zjp"/>
+            <point key="canvasLocation" x="139.13043478260872" y="279.91071428571428"/>
         </view>
     </objects>
     <resources>
