--- a/ReadingList/UI/Home/Home.storyboard
+++ b/ReadingList/UI/Home/Home.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="xxi-di-qzX">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="xxi-di-qzX">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -16,40 +16,40 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="73N-QL-l0O">
+                                <rect key="frame" x="0.0" y="52" width="414" height="40"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SjC-4F-GHl">
+                                        <rect key="frame" x="16" y="0.0" width="18" height="40"/>
+                                        <state key="normal" image="person.fill" catalog="system"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IR8-9H-TqJ">
+                                        <rect key="frame" x="386" y="0.0" width="20" height="40"/>
+                                        <state key="normal" image="wheel"/>
+                                        <connections>
+                                            <action selector="displayAboutAppVeiw:" destination="xxi-di-qzX" eventType="touchUpInside" id="bvI-nD-MHZ"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="SjC-4F-GHl" firstAttribute="top" secondItem="73N-QL-l0O" secondAttribute="top" id="DeF-ca-EOy"/>
+                                    <constraint firstAttribute="height" constant="40" id="MJJ-i3-Wpx"/>
+                                    <constraint firstAttribute="trailing" secondItem="IR8-9H-TqJ" secondAttribute="trailing" constant="8" id="Yid-ID-WfG"/>
+                                    <constraint firstAttribute="bottom" secondItem="IR8-9H-TqJ" secondAttribute="bottom" id="dgl-Q3-TqH"/>
+                                    <constraint firstAttribute="bottom" secondItem="SjC-4F-GHl" secondAttribute="bottom" id="i82-xS-N2l"/>
+                                    <constraint firstItem="SjC-4F-GHl" firstAttribute="leading" secondItem="73N-QL-l0O" secondAttribute="leading" constant="16" id="ssz-lM-Yba"/>
+                                    <constraint firstItem="IR8-9H-TqJ" firstAttribute="top" secondItem="73N-QL-l0O" secondAttribute="top" id="y4U-MD-Qti"/>
+                                </constraints>
+                            </view>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XrB-Lf-l98">
-                                <rect key="frame" x="0.0" y="44" width="414" height="852"/>
+                                <rect key="frame" x="0.0" y="92" width="414" height="804"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="oCe-8r-NCO">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="770"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="730"/>
                                         <subviews>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="73N-QL-l0O">
-                                                <rect key="frame" x="0.0" y="0.0" width="414" height="40"/>
-                                                <subviews>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SjC-4F-GHl">
-                                                        <rect key="frame" x="16" y="0.0" width="18" height="40"/>
-                                                        <state key="normal" image="person.fill" catalog="system"/>
-                                                    </button>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IR8-9H-TqJ">
-                                                        <rect key="frame" x="386" y="0.0" width="20" height="40"/>
-                                                        <state key="normal" image="wheel"/>
-                                                        <connections>
-                                                            <action selector="displayAboutAppVeiw:" destination="xxi-di-qzX" eventType="touchUpInside" id="bvI-nD-MHZ"/>
-                                                        </connections>
-                                                    </button>
-                                                </subviews>
-                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                <constraints>
-                                                    <constraint firstItem="SjC-4F-GHl" firstAttribute="top" secondItem="73N-QL-l0O" secondAttribute="top" id="DeF-ca-EOy"/>
-                                                    <constraint firstAttribute="height" constant="40" id="MJJ-i3-Wpx"/>
-                                                    <constraint firstAttribute="trailing" secondItem="IR8-9H-TqJ" secondAttribute="trailing" constant="8" id="Yid-ID-WfG"/>
-                                                    <constraint firstAttribute="bottom" secondItem="IR8-9H-TqJ" secondAttribute="bottom" id="dgl-Q3-TqH"/>
-                                                    <constraint firstAttribute="bottom" secondItem="SjC-4F-GHl" secondAttribute="bottom" id="i82-xS-N2l"/>
-                                                    <constraint firstItem="SjC-4F-GHl" firstAttribute="leading" secondItem="73N-QL-l0O" secondAttribute="leading" constant="16" id="ssz-lM-Yba"/>
-                                                    <constraint firstItem="IR8-9H-TqJ" firstAttribute="top" secondItem="73N-QL-l0O" secondAttribute="top" id="y4U-MD-Qti"/>
-                                                </constraints>
-                                            </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="V7z-6P-g1a">
-                                                <rect key="frame" x="0.0" y="40" width="414" height="30"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="414" height="30"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Data" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w3q-9O-aAp">
                                                         <rect key="frame" x="8" y="0.0" width="63" height="30"/>
@@ -75,7 +75,7 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Q5V-IB-Pnv">
-                                                <rect key="frame" x="0.0" y="70" width="414" height="200"/>
+                                                <rect key="frame" x="0.0" y="30" width="414" height="200"/>
                                                 <subviews>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hgr-rn-8wa" customClass="GraphView" customModule="ReadingList" customModuleProvider="target">
                                                         <rect key="frame" x="0.0" y="0.0" width="414" height="200"/>
@@ -91,7 +91,7 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cpi-Kq-Yl0">
-                                                <rect key="frame" x="0.0" y="270" width="414" height="50"/>
+                                                <rect key="frame" x="0.0" y="230" width="414" height="50"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1日以内に削除される未読記事" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q5q-IM-Xmr">
                                                         <rect key="frame" x="8" y="0.0" width="247" height="50"/>
@@ -133,7 +133,7 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="G1H-H7-AAI">
-                                                <rect key="frame" x="0.0" y="320" width="414" height="200"/>
+                                                <rect key="frame" x="0.0" y="280" width="414" height="200"/>
                                                 <subviews>
                                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="V04-rw-o4M">
                                                         <rect key="frame" x="0.0" y="8" width="414" height="184"/>
@@ -174,7 +174,7 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LWH-CV-4Gv">
-                                                <rect key="frame" x="0.0" y="520" width="414" height="50"/>
+                                                <rect key="frame" x="0.0" y="480" width="414" height="50"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="未読記事" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ETM-Rr-d03">
                                                         <rect key="frame" x="8" y="0.0" width="72.5" height="50"/>
@@ -217,7 +217,7 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cCX-Wo-qth">
-                                                <rect key="frame" x="0.0" y="570" width="414" height="200"/>
+                                                <rect key="frame" x="0.0" y="530" width="414" height="200"/>
                                                 <subviews>
                                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="IZB-SC-vzr">
                                                         <rect key="frame" x="0.0" y="8" width="414" height="184"/>
@@ -271,10 +271,13 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="73N-QL-l0O" firstAttribute="leading" secondItem="qMg-WX-vZW" secondAttribute="leading" id="4qN-tb-rHc"/>
                             <constraint firstItem="XrB-Lf-l98" firstAttribute="trailing" secondItem="qMg-WX-vZW" secondAttribute="trailing" id="5f7-Xs-ZVh"/>
+                            <constraint firstItem="XrB-Lf-l98" firstAttribute="top" secondItem="73N-QL-l0O" secondAttribute="bottom" id="8iv-P8-BDT"/>
+                            <constraint firstItem="73N-QL-l0O" firstAttribute="top" secondItem="qMg-WX-vZW" secondAttribute="top" constant="8" id="Ftt-v0-fVG"/>
+                            <constraint firstItem="73N-QL-l0O" firstAttribute="trailing" secondItem="qMg-WX-vZW" secondAttribute="trailing" id="Ytm-0R-AqR"/>
                             <constraint firstAttribute="bottom" secondItem="XrB-Lf-l98" secondAttribute="bottom" id="abl-3t-nln"/>
                             <constraint firstItem="XrB-Lf-l98" firstAttribute="leading" secondItem="qMg-WX-vZW" secondAttribute="leading" id="pc9-As-D2Z"/>
-                            <constraint firstItem="XrB-Lf-l98" firstAttribute="top" secondItem="qMg-WX-vZW" secondAttribute="top" id="xFW-he-uF2"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="qMg-WX-vZW"/>
                     </view>
